# bonzai-core-engine

./: .env.example  .env.production  .env.template  .gitignore  1  16_SERVICES_TEST_RESULTS.json  2  API_DOCUMENTATION.md  ASYNC_WARNING_FIX.md  BONZAI_BACKEND_MAPPING.json  BONZAI_EMPIRE_FIXER.py  BONZAI_MASTER_SYSTEM_VALIDATION.py  BONZAI_NUCLEAR_TEST_RESULTS.json  BONZAI_TEST_REPORT.md  CHALLENGE_DEPLOY_COMMANDS.sh  CLAUDE_AI_INTEGRATION_FIX.md  CLAUDE_CODE_IMPLEMENTATION_GUIDE.md  COMPREHENSIVE_BACKEND_MAPPER.py  COMPREHENSIVE_TEST_SUITE.py  DELIVERY_SUMMARY.md  Dockerfile.backup  Dockerfile.dev  Dockerfile.vm  GITHUB_ACTIONS_RESULTS_GUIDE.md  HONEST_TEST_RESULTS.json  LIVE_MOFY_AI_COMPREHENSIVE_TEST.py  LIVE_MOFY_AI_TEST_RESULTS.json  LOCAL_CHALLENGE_START.bat  LOCAL_VM_CHALLENGE.py  MASTER_BONZAI_TEST.py  MCP_SERVER_DOCUMENTATION.md  MEASURE_TWICE_TEST.py  NATHAN_WALK_REQUIREMENTS.md  PAPA_BEAR_REALITY_TEST.py  PRODUCTION_MASTER_TEST_SUITE.py  PRODUCTION_READINESS_ASSESSMENT.py  PRODUCTION_SERVICE_DOCUMENTATION.md  PRODUCTION_TESTING_README.md  Procfile  Procfile.gunicorn  (+101 more)
api/: agent_registry_api.py  agent_workbench_api.py  agentic_superpowers_api.py  collaborative_workspaces_api.py  execution_router_api.py  express_mode_api.py  express_mode_vertex_api.py  gemini_orchestra_api.py  github_ai_api.py  library_api.py  mcp_api_server.py  mcp_auth_endpoint.py  mcp_remote_server.py  multi_model_api.py  multimodal_chat_api.py  openai_vertex_api_simple.py  orchestration_api.py  (+8 more)
frontend-tauri/src-tauri/: Cargo.toml  tauri.conf.json
frontend-tauri/src-tauri/src/: main.rs
(+338 files in other folders)
