[package]
name = "mama-bear-family-ide"
version = "1.0.0"
description = "💜 Mama Bear's Ultimate Family IDE with Superpowers!"
authors = ["Mama Bear & Papa Bear"]
license = ""
repository = ""
default-run = "mama-bear-family-ide"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
default = ["custom-protocol"]
# DO NOT REMOVE!! The default feature can be used to enable or disable certain features.
custom-protocol = ["tauri/custom-protocol"]
